--- a/BankManagementSystem.vcxproj.filters
+++ b/BankManagementSystem.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="login.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="operations.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="setup.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="login.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="operations.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
